src/widgets/snapshots/rvision__widgets__theme_picker__tests__snapshot_second_candidate_highlighted.snap
---
source: src/widgets/theme_picker.rs
expression: render(&p)
---
Default             Alternate                  
Alternate           File   Edit                
                    Sample text                
                     a selected line           
                     OK   Cancel               
                     input                     
                    {a help link}              
                                               
                                               
      OK        Cancel
